Fix cutoff from top of screen for ui-select

--- a/src/ui/public/filter_editor/filter_editor.less
+++ b/src/ui/public/filter_editor/filter_editor.less
@@ -9,7 +9,6 @@
 .uiSelectChoices--autoWidth {
   width: auto !important;
   min-width: 100% !important;
-  max-height: 300px !important;
 }
 
 .uiSelectMatch--ellipsis {
